# collections

./: .gitignore  Dockerfile  README.md  app.py  collections.Dockerfile  pyproject.toml
apps/collections/: Dockerfile  app.py
apps/collections/tabs/: data.py  ontime_collections_tab.py
apps/leasing/: app.py  data.py
apps/leasing/tabs/: clearance_rates_tab.py
apps/your_dashboard_name/: app.py  data.py
dashboards/: README.md  collections.Dockerfile  leasing.Dockerfile  requirements.txt
dashboards/.streamlit/: config.toml
dashboards/apps/collections/: data.py
dashboards/apps/collections/tabs/: bad_debt_tab.py  evictions_tab.py  utils.py
dashboards/apps/leasing/: data.py  single_fetch.json
data/: pyproject.toml
data/src/amh/: amh.py  amh_local.py  amh_og.py
data/src/invh/: invh.py  invh_local.py  invh_original.py
data/src/progress/: progress.py  progress_og.py
src/: app.py
src/tabs/: bad_debt_tab.py  data.py  data_tab.py  evictions_tab.py  late_collections_tab.py  ontime_collections_tab.py  utils.py
tabs/: bad_debt_tab.py  data.py  data_tab.py  late_collections_tab.py  ontime_collections_tab.py
