[project]
name = "collections"
version = "0.1.0"
package-mode = false
description = "Up&Up Collections"
authors = [
    {name = "Jocelyn Thai",email = "jocelyn.thai@upandup.co"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "streamlit (>=1.46.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "google-cloud-bigquery (>=3.34.0,<4.0.0)",
    "pandas-gbq (>=0.29.2,<0.30.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
